// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Python Writer Generator static files 1`] = `
"fhirpy>=2.0.0,<3.0.0
mypy>=1.9.0,<2.0.0
pydantic>=2.11.0,<3.0.0
pytest>=8.3.0,<9.0.0
pytest-asyncio>=0.24.0,<1.0.0
requests>=2.32.0,<3.0.0
types-requests>=2.32.0,<3.0.0
"
`;

exports[`Python Writer Generator bundle.py matches snapshot 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations
from pydantic import BaseModel, ConfigDict, Field, PositiveInt, model_validator
from typing import Any, Generic, List as PyList, Literal
from typing_extensions import Self, TypeVar

from fhir_types.hl7_fhir_r4_core.base import BackboneElement, Identifier, Signature
from fhir_types.hl7_fhir_r4_core.resource import Resource
from fhir_types.hl7_fhir_r4_core.resource_preprocessor import preprocess_resource_fields

T = TypeVar('T', bound=Resource, default=Resource, covariant=True)
T1 = TypeVar('T1', bound=Resource, default=Resource, covariant=True)
T2 = TypeVar('T2', bound=Resource, default=Resource, covariant=True)


class BundleEntry(BackboneElement, Generic[T1, T2]):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    fullUrl: str | None = Field(None, alias="fullUrl", serialization_alias="fullUrl")
    link: PyList[BundleLink] | None = Field(None, alias="link", serialization_alias="link")
    request: BundleEntryRequest | None = Field(None, alias="request", serialization_alias="request")
    resource: T1 | None = Field(None, alias="resource", serialization_alias="resource")
    response: BundleEntryResponse[T2] | None = Field(None, alias="response", serialization_alias="response")
    search: BundleEntrySearch | None = Field(None, alias="search", serialization_alias="search")

    @model_validator(mode='before')
    @classmethod
    def _preprocess_resources(cls, data: Any) -> Any:
        if isinstance(data, dict):
            return preprocess_resource_fields(data, "fhir_types.hl7_fhir_r4_core")
        return data

class BundleEntryRequest(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    ifMatch: str | None = Field(None, alias="ifMatch", serialization_alias="ifMatch")
    ifModifiedSince: str | None = Field(None, alias="ifModifiedSince", serialization_alias="ifModifiedSince")
    ifNoneExist: str | None = Field(None, alias="ifNoneExist", serialization_alias="ifNoneExist")
    ifNoneMatch: str | None = Field(None, alias="ifNoneMatch", serialization_alias="ifNoneMatch")
    method: Literal["GET", "HEAD", "POST", "PUT", "DELETE", "PATCH"] = Field(alias="method", serialization_alias="method")
    url: str = Field(alias="url", serialization_alias="url")

class BundleEntryResponse(BackboneElement, Generic[T]):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    etag: str | None = Field(None, alias="etag", serialization_alias="etag")
    lastModified: str | None = Field(None, alias="lastModified", serialization_alias="lastModified")
    location: str | None = Field(None, alias="location", serialization_alias="location")
    outcome: T | None = Field(None, alias="outcome", serialization_alias="outcome")
    status: str = Field(alias="status", serialization_alias="status")

    @model_validator(mode='before')
    @classmethod
    def _preprocess_resources(cls, data: Any) -> Any:
        if isinstance(data, dict):
            return preprocess_resource_fields(data, "fhir_types.hl7_fhir_r4_core")
        return data

class BundleEntrySearch(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    mode: Literal["match", "include", "outcome"] | None = Field(None, alias="mode", serialization_alias="mode")
    score: float | None = Field(None, alias="score", serialization_alias="score")

class BundleLink(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    relation: str = Field(alias="relation", serialization_alias="relation")
    url: str = Field(alias="url", serialization_alias="url")


class Bundle(Resource, Generic[T1, T2]):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    resourceType: str = Field(
        default='Bundle',
        alias='resourceType',
        serialization_alias='resourceType',
        frozen=True,
        pattern='Bundle'
    )
    entry: PyList[BundleEntry[T1, T2]] | None = Field(None, alias="entry", serialization_alias="entry")
    identifier: Identifier | None = Field(None, alias="identifier", serialization_alias="identifier")
    link: PyList[BundleLink] | None = Field(None, alias="link", serialization_alias="link")
    signature: Signature | None = Field(None, alias="signature", serialization_alias="signature")
    timestamp: str | None = Field(None, alias="timestamp", serialization_alias="timestamp")
    total: int | None = Field(None, alias="total", serialization_alias="total")
    type: Literal["document", "message", "transaction", "transaction-response", "batch", "batch-response", "history", "searchset", "collection"] = Field(alias="type", serialization_alias="type")

    def model_post_init(self, __context: Any) -> None:
        self.__pydantic_fields_set__.add("resourceType")

    def to_json(self, indent: int | None = None) -> str:
        return self.model_dump_json(exclude_unset=True, exclude_none=True, indent=indent)

    @classmethod
    def from_json(cls, json: str) -> Self:
        return cls.model_validate_json(json)

    @model_validator(mode='before')
    @classmethod
    def _preprocess_resources(cls, data: Any) -> Any:
        if isinstance(data, dict):
            return preprocess_resource_fields(data, "fhir_types.hl7_fhir_r4_core")
        return data

"
`;

exports[`Python Writer Generator patient.py matches snapshot 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations
from pydantic import BaseModel, ConfigDict, Field, PositiveInt
from typing import Any, List as PyList, Literal
from typing_extensions import Self

from fhir_types.hl7_fhir_r4_core.base import (
    Address, Attachment, BackboneElement, CodeableConcept, ContactPoint, HumanName, Identifier, Period, Reference
)
from fhir_types.hl7_fhir_r4_core.domain_resource import DomainResource


class PatientCommunication(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    language: CodeableConcept[Literal["ar", "bn", "cs", "da", "de", "de-AT", "de-CH", "de-DE", "el", "en", "en-AU", "en-CA", "en-GB", "en-IN", "en-NZ", "en-SG", "en-US", "es", "es-AR", "es-ES", "es-UY", "fi", "fr", "fr-BE", "fr-CH", "fr-FR", "fy", "fy-NL", "hi", "hr", "it", "it-CH", "it-IT", "ja", "ko", "nl", "nl-BE", "nl-NL", "no", "no-NO", "pa", "pl", "pt", "pt-BR", "ru", "ru-RU", "sr", "sr-RS", "sv", "sv-SE", "te", "zh", "zh-CN", "zh-HK", "zh-SG", "zh-TW"] | str] = Field(alias="language", serialization_alias="language")
    preferred: bool | None = Field(None, alias="preferred", serialization_alias="preferred")

class PatientContact(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    address: Address | None = Field(None, alias="address", serialization_alias="address")
    gender: Literal["male", "female", "other", "unknown"] | None = Field(None, alias="gender", serialization_alias="gender")
    name: HumanName | None = Field(None, alias="name", serialization_alias="name")
    organization: Reference[Literal["Organization"]] | None = Field(None, alias="organization", serialization_alias="organization")
    period: Period | None = Field(None, alias="period", serialization_alias="period")
    relationship: PyList[CodeableConcept] | None = Field(None, alias="relationship", serialization_alias="relationship")
    telecom: PyList[ContactPoint] | None = Field(None, alias="telecom", serialization_alias="telecom")

class PatientLink(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    other: Reference[Literal["Patient", "RelatedPerson"]] = Field(alias="other", serialization_alias="other")
    type: Literal["replaced-by", "replaces", "refer", "seealso"] = Field(alias="type", serialization_alias="type")


class Patient(DomainResource):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    resourceType: str = Field(
        default='Patient',
        alias='resourceType',
        serialization_alias='resourceType',
        frozen=True,
        pattern='Patient'
    )
    active: bool | None = Field(None, alias="active", serialization_alias="active")
    address: PyList[Address] | None = Field(None, alias="address", serialization_alias="address")
    birthDate: str | None = Field(None, alias="birthDate", serialization_alias="birthDate")
    communication: PyList[PatientCommunication] | None = Field(None, alias="communication", serialization_alias="communication")
    contact: PyList[PatientContact] | None = Field(None, alias="contact", serialization_alias="contact")
    deceasedBoolean: bool | None = Field(None, alias="deceasedBoolean", serialization_alias="deceasedBoolean")
    deceasedDateTime: str | None = Field(None, alias="deceasedDateTime", serialization_alias="deceasedDateTime")
    gender: Literal["male", "female", "other", "unknown"] | None = Field(None, alias="gender", serialization_alias="gender")
    generalPractitioner: PyList[Reference[Literal["Organization", "Practitioner", "PractitionerRole"]]] | None = Field(None, alias="generalPractitioner", serialization_alias="generalPractitioner")
    identifier: PyList[Identifier] | None = Field(None, alias="identifier", serialization_alias="identifier")
    link: PyList[PatientLink] | None = Field(None, alias="link", serialization_alias="link")
    managingOrganization: Reference[Literal["Organization"]] | None = Field(None, alias="managingOrganization", serialization_alias="managingOrganization")
    maritalStatus: CodeableConcept[Literal["A", "D", "I", "L", "M", "P", "S", "T", "U", "W", "UNK"] | str] | None = Field(None, alias="maritalStatus", serialization_alias="maritalStatus")
    multipleBirthBoolean: bool | None = Field(None, alias="multipleBirthBoolean", serialization_alias="multipleBirthBoolean")
    multipleBirthInteger: int | None = Field(None, alias="multipleBirthInteger", serialization_alias="multipleBirthInteger")
    name: PyList[HumanName] | None = Field(None, alias="name", serialization_alias="name")
    photo: PyList[Attachment] | None = Field(None, alias="photo", serialization_alias="photo")
    telecom: PyList[ContactPoint] | None = Field(None, alias="telecom", serialization_alias="telecom")

    def model_post_init(self, __context: Any) -> None:
        self.__pydantic_fields_set__.add("resourceType")

    def to_json(self, indent: int | None = None) -> str:
        return self.model_dump_json(exclude_unset=True, exclude_none=True, indent=indent)

    @classmethod
    def from_json(cls, json: str) -> Self:
        return cls.model_validate_json(json)

"
`;

exports[`Python Writer Generator generates BundleEntry with generic type-family parameters 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations
from pydantic import BaseModel, ConfigDict, Field, PositiveInt, model_validator
from typing import Any, Generic, List as PyList, Literal
from typing_extensions import Self, TypeVar

from fhir_types.hl7_fhir_r4_core.base import BackboneElement, Identifier, Signature
from fhir_types.hl7_fhir_r4_core.resource import Resource
from fhir_types.hl7_fhir_r4_core.resource_preprocessor import preprocess_resource_fields

T = TypeVar('T', bound=Resource, default=Resource, covariant=True)
T1 = TypeVar('T1', bound=Resource, default=Resource, covariant=True)
T2 = TypeVar('T2', bound=Resource, default=Resource, covariant=True)


class BundleEntry(BackboneElement, Generic[T1, T2]):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    fullUrl: str | None = Field(None, alias="fullUrl", serialization_alias="fullUrl")
    link: PyList[BundleLink] | None = Field(None, alias="link", serialization_alias="link")
    request: BundleEntryRequest | None = Field(None, alias="request", serialization_alias="request")
    resource: T1 | None = Field(None, alias="resource", serialization_alias="resource")
    response: BundleEntryResponse[T2] | None = Field(None, alias="response", serialization_alias="response")
    search: BundleEntrySearch | None = Field(None, alias="search", serialization_alias="search")

    @model_validator(mode='before')
    @classmethod
    def _preprocess_resources(cls, data: Any) -> Any:
        if isinstance(data, dict):
            return preprocess_resource_fields(data, "fhir_types.hl7_fhir_r4_core")
        return data

class BundleEntryRequest(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    ifMatch: str | None = Field(None, alias="ifMatch", serialization_alias="ifMatch")
    ifModifiedSince: str | None = Field(None, alias="ifModifiedSince", serialization_alias="ifModifiedSince")
    ifNoneExist: str | None = Field(None, alias="ifNoneExist", serialization_alias="ifNoneExist")
    ifNoneMatch: str | None = Field(None, alias="ifNoneMatch", serialization_alias="ifNoneMatch")
    method: Literal["GET", "HEAD", "POST", "PUT", "DELETE", "PATCH"] = Field(alias="method", serialization_alias="method")
    url: str = Field(alias="url", serialization_alias="url")

class BundleEntryResponse(BackboneElement, Generic[T]):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    etag: str | None = Field(None, alias="etag", serialization_alias="etag")
    lastModified: str | None = Field(None, alias="lastModified", serialization_alias="lastModified")
    location: str | None = Field(None, alias="location", serialization_alias="location")
    outcome: T | None = Field(None, alias="outcome", serialization_alias="outcome")
    status: str = Field(alias="status", serialization_alias="status")

    @model_validator(mode='before')
    @classmethod
    def _preprocess_resources(cls, data: Any) -> Any:
        if isinstance(data, dict):
            return preprocess_resource_fields(data, "fhir_types.hl7_fhir_r4_core")
        return data

class BundleEntrySearch(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    mode: Literal["match", "include", "outcome"] | None = Field(None, alias="mode", serialization_alias="mode")
    score: float | None = Field(None, alias="score", serialization_alias="score")

class BundleLink(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    relation: str = Field(alias="relation", serialization_alias="relation")
    url: str = Field(alias="url", serialization_alias="url")


class Bundle(Resource, Generic[T1, T2]):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    resourceType: str = Field(
        default='Bundle',
        alias='resourceType',
        serialization_alias='resourceType',
        frozen=True,
        pattern='Bundle'
    )
    entry: PyList[BundleEntry[T1, T2]] | None = Field(None, alias="entry", serialization_alias="entry")
    identifier: Identifier | None = Field(None, alias="identifier", serialization_alias="identifier")
    link: PyList[BundleLink] | None = Field(None, alias="link", serialization_alias="link")
    signature: Signature | None = Field(None, alias="signature", serialization_alias="signature")
    timestamp: str | None = Field(None, alias="timestamp", serialization_alias="timestamp")
    total: int | None = Field(None, alias="total", serialization_alias="total")
    type: Literal["document", "message", "transaction", "transaction-response", "batch", "batch-response", "history", "searchset", "collection"] = Field(alias="type", serialization_alias="type")

    def model_post_init(self, __context: Any) -> None:
        self.__pydantic_fields_set__.add("resourceType")

    def to_json(self, indent: int | None = None) -> str:
        return self.model_dump_json(exclude_unset=True, exclude_none=True, indent=indent)

    @classmethod
    def from_json(cls, json: str) -> Self:
        return cls.model_validate_json(json)

    @model_validator(mode='before')
    @classmethod
    def _preprocess_resources(cls, data: Any) -> Any:
        if isinstance(data, dict):
            return preprocess_resource_fields(data, "fhir_types.hl7_fhir_r4_core")
        return data

"
`;

exports[`Python Writer Generator generates Bundle with inherited generic params from BundleEntry 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations
from pydantic import BaseModel, ConfigDict, Field, PositiveInt, model_validator
from typing import Any, Generic, List as PyList, Literal
from typing_extensions import Self, TypeVar

from fhir_types.hl7_fhir_r4_core.base import BackboneElement, Identifier, Signature
from fhir_types.hl7_fhir_r4_core.resource import Resource
from fhir_types.hl7_fhir_r4_core.resource_preprocessor import preprocess_resource_fields

T = TypeVar('T', bound=Resource, default=Resource, covariant=True)
T1 = TypeVar('T1', bound=Resource, default=Resource, covariant=True)
T2 = TypeVar('T2', bound=Resource, default=Resource, covariant=True)


class BundleEntry(BackboneElement, Generic[T1, T2]):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    fullUrl: str | None = Field(None, alias="fullUrl", serialization_alias="fullUrl")
    link: PyList[BundleLink] | None = Field(None, alias="link", serialization_alias="link")
    request: BundleEntryRequest | None = Field(None, alias="request", serialization_alias="request")
    resource: T1 | None = Field(None, alias="resource", serialization_alias="resource")
    response: BundleEntryResponse[T2] | None = Field(None, alias="response", serialization_alias="response")
    search: BundleEntrySearch | None = Field(None, alias="search", serialization_alias="search")

    @model_validator(mode='before')
    @classmethod
    def _preprocess_resources(cls, data: Any) -> Any:
        if isinstance(data, dict):
            return preprocess_resource_fields(data, "fhir_types.hl7_fhir_r4_core")
        return data

class BundleEntryRequest(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    ifMatch: str | None = Field(None, alias="ifMatch", serialization_alias="ifMatch")
    ifModifiedSince: str | None = Field(None, alias="ifModifiedSince", serialization_alias="ifModifiedSince")
    ifNoneExist: str | None = Field(None, alias="ifNoneExist", serialization_alias="ifNoneExist")
    ifNoneMatch: str | None = Field(None, alias="ifNoneMatch", serialization_alias="ifNoneMatch")
    method: Literal["GET", "HEAD", "POST", "PUT", "DELETE", "PATCH"] = Field(alias="method", serialization_alias="method")
    url: str = Field(alias="url", serialization_alias="url")

class BundleEntryResponse(BackboneElement, Generic[T]):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    etag: str | None = Field(None, alias="etag", serialization_alias="etag")
    lastModified: str | None = Field(None, alias="lastModified", serialization_alias="lastModified")
    location: str | None = Field(None, alias="location", serialization_alias="location")
    outcome: T | None = Field(None, alias="outcome", serialization_alias="outcome")
    status: str = Field(alias="status", serialization_alias="status")

    @model_validator(mode='before')
    @classmethod
    def _preprocess_resources(cls, data: Any) -> Any:
        if isinstance(data, dict):
            return preprocess_resource_fields(data, "fhir_types.hl7_fhir_r4_core")
        return data

class BundleEntrySearch(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    mode: Literal["match", "include", "outcome"] | None = Field(None, alias="mode", serialization_alias="mode")
    score: float | None = Field(None, alias="score", serialization_alias="score")

class BundleLink(BackboneElement):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    relation: str = Field(alias="relation", serialization_alias="relation")
    url: str = Field(alias="url", serialization_alias="url")


class Bundle(Resource, Generic[T1, T2]):
    model_config = ConfigDict(validate_by_name=True, serialize_by_alias=True, extra="forbid")
    resourceType: str = Field(
        default='Bundle',
        alias='resourceType',
        serialization_alias='resourceType',
        frozen=True,
        pattern='Bundle'
    )
    entry: PyList[BundleEntry[T1, T2]] | None = Field(None, alias="entry", serialization_alias="entry")
    identifier: Identifier | None = Field(None, alias="identifier", serialization_alias="identifier")
    link: PyList[BundleLink] | None = Field(None, alias="link", serialization_alias="link")
    signature: Signature | None = Field(None, alias="signature", serialization_alias="signature")
    timestamp: str | None = Field(None, alias="timestamp", serialization_alias="timestamp")
    total: int | None = Field(None, alias="total", serialization_alias="total")
    type: Literal["document", "message", "transaction", "transaction-response", "batch", "batch-response", "history", "searchset", "collection"] = Field(alias="type", serialization_alias="type")

    def model_post_init(self, __context: Any) -> None:
        self.__pydantic_fields_set__.add("resourceType")

    def to_json(self, indent: int | None = None) -> str:
        return self.model_dump_json(exclude_unset=True, exclude_none=True, indent=indent)

    @classmethod
    def from_json(cls, json: str) -> Self:
        return cls.model_validate_json(json)

    @model_validator(mode='before')
    @classmethod
    def _preprocess_resources(cls, data: Any) -> Any:
        if isinstance(data, dict):
            return preprocess_resource_fields(data, "fhir_types.hl7_fhir_r4_core")
        return data

"
`;

exports[`Python R4 Example (with generateProfile) generates bodyweight profile with validate() 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations

from typing import Any, Literal, cast, overload

from fhir_types.hl7_fhir_r4_core.observation import Observation
from fhir_types.hl7_fhir_r4_core.base import CodeableConcept, Period, Quantity, Reference
from fhir_types.profile_helpers import (
    apply_slice_match, build_resource, ensure_profile, ensure_slice_defaults, get_array_slice, matches_value, \\
    set_array_slice, strip_match_keys, validate_choice_prohibited, validate_choice_required, validate_enum, \\
    validate_fixed_value, validate_must_support, validate_reference, validate_required, validate_slice_cardinality
)


class ObservationBodyweightProfile:
    """FHIR Body Weight Profile

    CanonicalURL: http://hl7.org/fhir/StructureDefinition/bodyweight
    """

    resource_type: str = "Observation"
    canonical_url: str = "http://hl7.org/fhir/StructureDefinition/bodyweight"

    _vscat_slice_match: dict[str, Any] = {"coding":[{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}]}

    def __init__(self, resource: Observation) -> None:
        self._resource = resource

    @classmethod
    def from_resource(cls, resource: Observation) -> "ObservationBodyweightProfile":
        meta = getattr(resource, "meta", None)
        profiles = getattr(meta, "profile", None) if meta is not None else None
        if profiles is None or cls.canonical_url not in profiles:
            raise ValueError(f"ObservationBodyweightProfile: meta.profile must include {cls.canonical_url}")
        profile = cls(resource)
        result = profile.validate()
        if result["errors"]:
            raise ValueError("; ".join(result["errors"]))
        return profile

    @classmethod
    def apply(cls, resource: Observation) -> "ObservationBodyweightProfile":
        ensure_profile(resource, cls.canonical_url)
        return cls(resource)

    @classmethod
    def create_resource(cls, *, category: list[CodeableConcept] | None = None, status: Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"], subject: Reference[Literal["Patient"]]) -> Observation:
        category_with_defaults = ensure_slice_defaults(list(category or []), cls._vscat_slice_match)

        return build_resource(
            Observation,
            resourceType="Observation",
            code={"coding":[{"code":"29463-7","system":"http://loinc.org"}]},
            category=category_with_defaults,
            status=status,
            subject=subject,
            meta={"profile": [cls.canonical_url]},
        )

    @classmethod
    def create(cls, *, category: list[CodeableConcept] | None = None, status: Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"], subject: Reference[Literal["Patient"]]) -> "ObservationBodyweightProfile":
        return cls.apply(cls.create_resource(category=category, status=status, subject=subject))

    def to_resource(self) -> Observation:
        return self._resource

    def get_status(self) -> Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"] | None:
        return cast('Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"] | None', getattr(self._resource, "status", None))

    def set_status(self, value: Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"]) -> "ObservationBodyweightProfile":
        setattr(self._resource, "status", value)
        return self

    def get_subject(self) -> Reference[Literal["Patient"]] | None:
        return cast('Reference[Literal["Patient"]] | None', getattr(self._resource, "subject", None))

    def set_subject(self, value: Reference[Literal["Patient"]]) -> "ObservationBodyweightProfile":
        setattr(self._resource, "subject", value)
        return self

    def get_category(self) -> list[CodeableConcept] | None:
        return cast('list[CodeableConcept] | None', getattr(self._resource, "category", None))

    def set_category(self, value: list[CodeableConcept]) -> "ObservationBodyweightProfile":
        setattr(self._resource, "category", value)
        return self

    def get_code(self) -> CodeableConcept | None:
        return cast('CodeableConcept | None', getattr(self._resource, "code", None))

    def set_code(self, value: CodeableConcept) -> "ObservationBodyweightProfile":
        setattr(self._resource, "code", value)
        return self

    def get_effective_date_time(self) -> str | None:
        return cast('str | None', getattr(self._resource, "effectiveDateTime", None))

    def set_effective_date_time(self, value: str) -> "ObservationBodyweightProfile":
        setattr(self._resource, "effectivePeriod", None)
        setattr(self._resource, "effectiveDateTime", value)
        return self

    def get_effective_period(self) -> Period | None:
        return cast('Period | None', getattr(self._resource, "effectivePeriod", None))

    def set_effective_period(self, value: Period) -> "ObservationBodyweightProfile":
        setattr(self._resource, "effectiveDateTime", None)
        setattr(self._resource, "effectivePeriod", value)
        return self

    def get_value_quantity(self) -> Quantity | None:
        return cast('Quantity | None', getattr(self._resource, "valueQuantity", None))

    def set_value_quantity(self, value: Quantity) -> "ObservationBodyweightProfile":
        setattr(self._resource, "valueQuantity", value)
        return self

    @overload
    def get_vscat(self) -> dict[str, Any] | None: ...
    @overload
    def get_vscat(self, mode: Literal["raw"]) -> CodeableConcept | None: ...
    def get_vscat(self, mode: Literal["raw"] | None = None) -> dict[str, Any] | CodeableConcept | None:
        match = self.__class__._vscat_slice_match
        item = get_array_slice(getattr(self._resource, "category", None), match)
        if mode == "raw":
            return cast('CodeableConcept | None', item)
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return strip_match_keys(item_dict, ["coding"])

    def set_vscat(self, value: dict[str, Any] | None = None) -> "ObservationBodyweightProfile":
        match = self.__class__._vscat_slice_match
        merged = apply_slice_match((value or {}), match)
        element = CodeableConcept(**merged)
        items = getattr(self._resource, "category", None) or []
        set_array_slice(items, match, element)
        setattr(self._resource, "category", items)
        return self

    def validate(self) -> dict[str, list[str]]:
        profile_name = "ObservationBodyweightProfile"
        errors: list[str] = []
        warnings: list[str] = []
        errors.extend(validate_required(self._resource, profile_name, "status"))
        errors.extend(
            validate_enum(self._resource, profile_name, "status", [
                "registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"
        ]))
        errors.extend(validate_required(self._resource, profile_name, "category"))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "category", {"coding":[{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}]}, "VSCat", 1, 1))
        errors.extend(validate_required(self._resource, profile_name, "code"))
        errors.extend(validate_fixed_value(self._resource, profile_name, "code", {"coding":[{"code":"29463-7","system":"http://loinc.org"}]}))
        errors.extend(validate_required(self._resource, profile_name, "subject"))
        errors.extend(
            validate_reference(self._resource, profile_name, "subject", [
                "Patient"
        ]))
        errors.extend(
            validate_choice_required(self._resource, profile_name, [
                "effectiveDateTime","effectivePeriod"
        ]))
        errors.extend(
            validate_choice_prohibited(self._resource, profile_name, [
                "effectiveTiming","effectiveInstant"
        ]))
        errors.extend(
            validate_reference(self._resource, profile_name, "hasMember", [
                "MolecularSequence","Observation","QuestionnaireResponse"
        ]))
        errors.extend(
            validate_reference(self._resource, profile_name, "derivedFrom", [
                "DocumentReference","ImagingStudy","Media","MolecularSequence","Observation","QuestionnaireResponse"
        ]))
        errors.extend(
            validate_choice_prohibited(self._resource, profile_name, [
                "valueCodeableConcept","valueString","valueBoolean","valueInteger","valueRange","valueRatio","valueSampledData","valueTime","valueDateTime","valuePeriod"
        ]))
        warnings.extend(
            validate_enum(self._resource, profile_name, "category", [
                "social-history","vital-signs","imaging","laboratory","procedure","survey","exam","therapy","activity"
        ]))
        warnings.extend(
            validate_enum(self._resource, profile_name, "code", [
                "85353-1","9279-1","8867-4","2708-6","8310-5","8302-2","9843-4","29463-7","39156-5","85354-9","8480-6","8462-4","8478-0"
        ]))
        warnings.extend(
            validate_enum(self._resource, profile_name, "dataAbsentReason", [
                "unknown","asked-unknown","temp-unknown","not-asked","asked-declined","masked","not-applicable","unsupported","as-text","error","not-a-number","negative-infinity","positive-infinity","not-performed","not-permitted"
        ]))
        warnings.extend(validate_must_support(self._resource, profile_name, "dataAbsentReason"))
        return {"errors": errors, "warnings": warnings}

"
`;

exports[`Python R4 Example (with generateProfile) generates bp profile with validate() 1`] = `
"# WARNING: This file is autogenerated by @atomic-ehr/codegen.
# GitHub: https://github.com/atomic-ehr/codegen
# Any manual changes made to this file may be overwritten.

from __future__ import annotations

from typing import Any, Literal, cast, overload

from fhir_types.hl7_fhir_r4_core.observation import Observation
from fhir_types.hl7_fhir_r4_core.base import CodeableConcept, Period, Quantity, Reference
from fhir_types.hl7_fhir_r4_core.observation import ObservationComponent
from fhir_types.profile_helpers import (
    apply_slice_match, build_resource, ensure_profile, ensure_slice_defaults, get_array_slice, matches_value, \\
    set_array_slice, strip_match_keys, unwrap_slice_choice, validate_choice_prohibited, validate_choice_required, \\
    validate_enum, validate_fixed_value, validate_must_support, validate_reference, validate_required, validate_slice_cardinality, \\
    validate_slice_fields, wrap_slice_choice
)


class ObservationBpProfile:
    """FHIR Blood Pressure Profile

    CanonicalURL: http://hl7.org/fhir/StructureDefinition/bp
    """

    resource_type: str = "Observation"
    canonical_url: str = "http://hl7.org/fhir/StructureDefinition/bp"

    _vscat_slice_match: dict[str, Any] = {"coding":[{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}]}
    _systolic_bp_slice_match: dict[str, Any] = {"code":{"coding":[{"code":"8480-6","system":"http://loinc.org"}]}}
    _diastolic_bp_slice_match: dict[str, Any] = {"code":{"coding":[{"code":"8462-4","system":"http://loinc.org"}]}}

    def __init__(self, resource: Observation) -> None:
        self._resource = resource

    @classmethod
    def from_resource(cls, resource: Observation) -> "ObservationBpProfile":
        meta = getattr(resource, "meta", None)
        profiles = getattr(meta, "profile", None) if meta is not None else None
        if profiles is None or cls.canonical_url not in profiles:
            raise ValueError(f"ObservationBpProfile: meta.profile must include {cls.canonical_url}")
        profile = cls(resource)
        result = profile.validate()
        if result["errors"]:
            raise ValueError("; ".join(result["errors"]))
        return profile

    @classmethod
    def apply(cls, resource: Observation) -> "ObservationBpProfile":
        ensure_profile(resource, cls.canonical_url)
        return cls(resource)

    @classmethod
    def create_resource(cls, *, category: list[CodeableConcept] | None = None, component: list[ObservationComponent] | None = None, status: Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"], subject: Reference[Literal["Patient"]]) -> Observation:
        category_with_defaults = ensure_slice_defaults(list(category or []), cls._vscat_slice_match)
        component_with_defaults = ensure_slice_defaults(
            list(component or []),
            cls._systolic_bp_slice_match,
            cls._diastolic_bp_slice_match,
        )

        return build_resource(
            Observation,
            resourceType="Observation",
            code={"coding":[{"code":"85354-9","system":"http://loinc.org"}]},
            category=category_with_defaults,
            component=component_with_defaults,
            status=status,
            subject=subject,
            meta={"profile": [cls.canonical_url]},
        )

    @classmethod
    def create(cls, *, category: list[CodeableConcept] | None = None, component: list[ObservationComponent] | None = None, status: Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"], subject: Reference[Literal["Patient"]]) -> "ObservationBpProfile":
        return cls.apply(cls.create_resource(category=category, component=component, status=status, subject=subject))

    def to_resource(self) -> Observation:
        return self._resource

    def get_status(self) -> Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"] | None:
        return cast('Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"] | None', getattr(self._resource, "status", None))

    def set_status(self, value: Literal["registered", "preliminary", "final", "amended", "corrected", "cancelled", "entered-in-error", "unknown"]) -> "ObservationBpProfile":
        setattr(self._resource, "status", value)
        return self

    def get_subject(self) -> Reference[Literal["Patient"]] | None:
        return cast('Reference[Literal["Patient"]] | None', getattr(self._resource, "subject", None))

    def set_subject(self, value: Reference[Literal["Patient"]]) -> "ObservationBpProfile":
        setattr(self._resource, "subject", value)
        return self

    def get_category(self) -> list[CodeableConcept] | None:
        return cast('list[CodeableConcept] | None', getattr(self._resource, "category", None))

    def set_category(self, value: list[CodeableConcept]) -> "ObservationBpProfile":
        setattr(self._resource, "category", value)
        return self

    def get_code(self) -> CodeableConcept | None:
        return cast('CodeableConcept | None', getattr(self._resource, "code", None))

    def set_code(self, value: CodeableConcept) -> "ObservationBpProfile":
        setattr(self._resource, "code", value)
        return self

    def get_component(self) -> list[ObservationComponent] | None:
        return cast('list[ObservationComponent] | None', getattr(self._resource, "component", None))

    def set_component(self, value: list[ObservationComponent]) -> "ObservationBpProfile":
        setattr(self._resource, "component", value)
        return self

    def get_effective_date_time(self) -> str | None:
        return cast('str | None', getattr(self._resource, "effectiveDateTime", None))

    def set_effective_date_time(self, value: str) -> "ObservationBpProfile":
        setattr(self._resource, "effectivePeriod", None)
        setattr(self._resource, "effectiveDateTime", value)
        return self

    def get_effective_period(self) -> Period | None:
        return cast('Period | None', getattr(self._resource, "effectivePeriod", None))

    def set_effective_period(self, value: Period) -> "ObservationBpProfile":
        setattr(self._resource, "effectiveDateTime", None)
        setattr(self._resource, "effectivePeriod", value)
        return self

    def get_value_quantity(self) -> Quantity | None:
        return cast('Quantity | None', getattr(self._resource, "valueQuantity", None))

    def set_value_quantity(self, value: Quantity) -> "ObservationBpProfile":
        setattr(self._resource, "valueQuantity", value)
        return self

    @overload
    def get_vscat(self) -> dict[str, Any] | None: ...
    @overload
    def get_vscat(self, mode: Literal["raw"]) -> CodeableConcept | None: ...
    def get_vscat(self, mode: Literal["raw"] | None = None) -> dict[str, Any] | CodeableConcept | None:
        match = self.__class__._vscat_slice_match
        item = get_array_slice(getattr(self._resource, "category", None), match)
        if mode == "raw":
            return cast('CodeableConcept | None', item)
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return strip_match_keys(item_dict, ["coding"])

    @overload
    def get_systolic_bp(self) -> dict[str, Any] | None: ...
    @overload
    def get_systolic_bp(self, mode: Literal["raw"]) -> ObservationComponent | None: ...
    def get_systolic_bp(self, mode: Literal["raw"] | None = None) -> dict[str, Any] | ObservationComponent | None:
        match = self.__class__._systolic_bp_slice_match
        item = get_array_slice(getattr(self._resource, "component", None), match)
        if mode == "raw":
            return cast('ObservationComponent | None', item)
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return unwrap_slice_choice(item_dict, ["code"], "valueQuantity")

    @overload
    def get_diastolic_bp(self) -> dict[str, Any] | None: ...
    @overload
    def get_diastolic_bp(self, mode: Literal["raw"]) -> ObservationComponent | None: ...
    def get_diastolic_bp(self, mode: Literal["raw"] | None = None) -> dict[str, Any] | ObservationComponent | None:
        match = self.__class__._diastolic_bp_slice_match
        item = get_array_slice(getattr(self._resource, "component", None), match)
        if mode == "raw":
            return cast('ObservationComponent | None', item)
        item_dict = item if isinstance(item, dict) else item.model_dump(by_alias=True, exclude_none=True)
        return unwrap_slice_choice(item_dict, ["code"], "valueQuantity")

    def set_vscat(self, value: dict[str, Any] | None = None) -> "ObservationBpProfile":
        match = self.__class__._vscat_slice_match
        merged = apply_slice_match((value or {}), match)
        element = CodeableConcept(**merged)
        items = getattr(self._resource, "category", None) or []
        set_array_slice(items, match, element)
        setattr(self._resource, "category", items)
        return self

    def set_systolic_bp(self, value: dict[str, Any] | None = None) -> "ObservationBpProfile":
        match = self.__class__._systolic_bp_slice_match
        wrapped = wrap_slice_choice((value or {}), "valueQuantity")
        merged = apply_slice_match(wrapped, match)
        element = ObservationComponent(**merged)
        items = getattr(self._resource, "component", None) or []
        set_array_slice(items, match, element)
        setattr(self._resource, "component", items)
        return self

    def set_diastolic_bp(self, value: dict[str, Any] | None = None) -> "ObservationBpProfile":
        match = self.__class__._diastolic_bp_slice_match
        wrapped = wrap_slice_choice((value or {}), "valueQuantity")
        merged = apply_slice_match(wrapped, match)
        element = ObservationComponent(**merged)
        items = getattr(self._resource, "component", None) or []
        set_array_slice(items, match, element)
        setattr(self._resource, "component", items)
        return self

    def validate(self) -> dict[str, list[str]]:
        profile_name = "ObservationBpProfile"
        errors: list[str] = []
        warnings: list[str] = []
        errors.extend(validate_required(self._resource, profile_name, "status"))
        errors.extend(
            validate_enum(self._resource, profile_name, "status", [
                "registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"
        ]))
        errors.extend(validate_required(self._resource, profile_name, "category"))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "category", {"coding":[{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}]}, "VSCat", 1, 1))
        errors.extend(validate_required(self._resource, profile_name, "code"))
        errors.extend(validate_fixed_value(self._resource, profile_name, "code", {"coding":[{"code":"85354-9","system":"http://loinc.org"}]}))
        errors.extend(validate_required(self._resource, profile_name, "subject"))
        errors.extend(
            validate_reference(self._resource, profile_name, "subject", [
                "Patient"
        ]))
        errors.extend(
            validate_choice_required(self._resource, profile_name, [
                "effectiveDateTime","effectivePeriod"
        ]))
        errors.extend(
            validate_choice_prohibited(self._resource, profile_name, [
                "effectiveTiming","effectiveInstant"
        ]))
        errors.extend(
            validate_reference(self._resource, profile_name, "hasMember", [
                "MolecularSequence","Observation","QuestionnaireResponse"
        ]))
        errors.extend(
            validate_reference(self._resource, profile_name, "derivedFrom", [
                "DocumentReference","ImagingStudy","Media","MolecularSequence","Observation","QuestionnaireResponse"
        ]))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "component", {"code":{"coding":[{"code":"8480-6","system":"http://loinc.org"}]}}, "SystolicBP", 1, 1))
        errors.extend(
            validate_slice_fields(self._resource, profile_name, "component", {"code":{"coding":[{"code":"8480-6","system":"http://loinc.org"}]}}, "SystolicBP", [
                "valueQuantity"
        ]))
        errors.extend(validate_slice_cardinality(self._resource, profile_name, "component", {"code":{"coding":[{"code":"8462-4","system":"http://loinc.org"}]}}, "DiastolicBP", 1, 1))
        errors.extend(
            validate_slice_fields(self._resource, profile_name, "component", {"code":{"coding":[{"code":"8462-4","system":"http://loinc.org"}]}}, "DiastolicBP", [
                "valueQuantity"
        ]))
        errors.extend(
            validate_choice_prohibited(self._resource, profile_name, [
                "valueCodeableConcept","valueString","valueBoolean","valueInteger","valueRange","valueRatio","valueSampledData","valueTime","valueDateTime","valuePeriod"
        ]))
        warnings.extend(
            validate_enum(self._resource, profile_name, "category", [
                "social-history","vital-signs","imaging","laboratory","procedure","survey","exam","therapy","activity"
        ]))
        warnings.extend(
            validate_enum(self._resource, profile_name, "code", [
                "85353-1","9279-1","8867-4","2708-6","8310-5","8302-2","9843-4","29463-7","39156-5","85354-9","8480-6","8462-4","8478-0"
        ]))
        warnings.extend(
            validate_enum(self._resource, profile_name, "dataAbsentReason", [
                "unknown","asked-unknown","temp-unknown","not-asked","asked-declined","masked","not-applicable","unsupported","as-text","error","not-a-number","negative-infinity","positive-infinity","not-performed","not-permitted"
        ]))
        warnings.extend(validate_must_support(self._resource, profile_name, "dataAbsentReason"))
        return {"errors": errors, "warnings": warnings}

"
`;
